# habitathq

./: .aider.conf.yml  .dependency-cruiser.cjs  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GLOSSARY.md  Justfile  biome.json  bootstrap.sh  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  semgrep.yml  skills-lock.json
.agents/: allowed-commands.md  forbidden.md
.cargo/: config.toml  mutants.toml
.claude/: settings.json
.cursor/rules/: ios-a11y.mdc  pr-stack-workflow.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build-android.yml  ci.yml  deploy.yml
apps/habitat/: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  capacitor.config.ts  habitat-codebase.md  keep.txt  nuxt.config.ts  package.json  playwright.a11y.config.ts  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/habitat/.claude/: settings.json  settings.local.json
apps/habitat/.github/ISSUE_TEMPLATE/: bug.md  display.md  feature.md  improvement.md
apps/habitat/app/: app.config.ts  app.vue  error.vue
apps/habitat/app/components/: AppCard.vue  AppCardIcon.vue  AppIcon.vue  AppListSection.vue  AppModal.vue  AppTextArea.vue  AppTextField.vue  BackNav.vue  CheckinFormModal.vue  CheckinInsights.vue  CollapsibleSection.vue  (+30 more)
apps/habitat/tests/: setup.ts
apps/halcyon/: .gitignore  AGENTS.md  DESIGN.md  capacitor.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
apps/halcyon/app/: app.vue
apps/hearth/: .gitignore  AGENTS.md  biome.json  nuxt.config.ts  package.json  playwright.config.ts
apps/hearth/app/: app.config.ts
apps/hearth/scripts/: fetch-offline-assets.mjs
apps/hephaestus/: .gitignore  AGENTS.md  biome.json  capacitor.config.ts  design.md  issues.md  lefthook.yml  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  template-improvements.md  tsconfig.json  vitest.config.ts
apps/hephaestus/app/: app.config.ts  app.vue
apps/hephaestus/scripts/: scrape_exercises.py  scrape_training_fit.py
apps/landing/: README.md  index.html
libs/habitat-db/: AGENTS.md  package.json  tsconfig.json
libs/habitat-db/src/: adapter-bridge.ts  index.ts  types.ts
libs/habitat-shared/: AGENTS.md  nuxt.config.ts  package.json
libs/habitat-utils/: AGENTS.md  package.json  tsconfig.json
libs/habitat-utils/src/: error.ts  format-date.ts  icons.ts  index.ts  json.ts
libs/palladium/: .gitignore  .tool-versions  AGENTS.md  DRAFT-ARCH.md  Justfile  README.md  STATUS.md  biome.json  bootstrap.sh  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  stryker.config.mjs  tsconfig.base.json  vitest.workspace.ts
libs/palladium/.changeset/: config.json
libs/palladium/.github/: copilot-instructions.md
libs/palladium/cli-wrapper/: package.json  tsconfig.json
libs/palladium/core/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/crates/palladium-axum/: Cargo.toml
libs/palladium/crates/palladium-axum/src/: error.rs  lib.rs  state.rs
libs/palladium/crates/palladium-axum/src/routes/: blobs.rs  changes.rs  health.rs  mod.rs
libs/palladium/crates/palladium-axum/tests/: cats.rs  health.rs  integration.rs
libs/palladium/crates/palladium-blobs/: Cargo.toml
libs/palladium/crates/palladium-blobs/src/: column_meta.rs  error.rs  filesystem.rs  lib.rs  metadata.rs
libs/palladium/crates/palladium-cli/: Cargo.toml
libs/palladium/crates/palladium-cli/src/: main.rs
libs/palladium/crates/palladium-core/: Cargo.toml
libs/palladium/crates/palladium-core/benches/: hlc.rs  serde.rs
libs/palladium/crates/palladium-core/src/: change.rs  config.rs  error.rs  hlc.rs  instance_config.rs  instance_registry.rs  instance_status.rs  lib.rs  node_id.rs  op.rs  store.rs
libs/palladium/crates/palladium-postgres/: Cargo.toml
libs/palladium/crates/palladium-postgres/src/: error.rs  lib.rs  store.rs
libs/palladium/crates/palladium-postgres/tests/: load.rs
libs/palladium/crates/palladium-sqlite/: Cargo.toml
libs/palladium/crates/palladium-sqlite/benches/: store.rs
libs/palladium/crates/palladium-sqlite/src/: error.rs  lib.rs  store.rs
libs/palladium/docs/: DRAFT-ARCH.md  answers.md  idea.md
libs/palladium/e2e/: package.json  vitest.config.ts
libs/palladium/example-capacitor/: index.html  package.json  playwright.config.ts  test-electron.sh  tsconfig.electron.json  tsconfig.json  vite.config.ts
libs/palladium/example-multitab/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
libs/palladium/example-react/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
libs/palladium/example-vue/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
libs/palladium/kysely/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/notifications-browser/: package.json  vitest.config.ts
libs/palladium/notifications-capacitor/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/notifications-core/: package.json  vitest.config.ts  vitest.integration.config.ts
libs/palladium/notifications-expo/: package.json  vitest.config.ts
libs/palladium/notifications-react/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/notifications-svelte/: package.json  vitest.config.ts
libs/palladium/notifications-toast/: package.json  vitest.config.ts
libs/palladium/notifications-vue/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/notifications-web-push/: package.json  vitest.config.ts
libs/palladium/nuxt/: package.json  tsconfig.json
libs/palladium/react/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/sqlite-browser/: package.json
libs/palladium/sqlite-capacitor/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/sqlite-node/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/svelte/: package.json  vitest.config.ts
libs/palladium/vite-plugin/: package.json  vitest.config.ts
libs/palladium/vue/: package.json  tsconfig.json  vitest.config.ts
libs/palladium/worker/: package.json  tsconfig.json
scripts/: doctor.sh
(+574 files in other folders)
