[workspace]
members = ["libs/palladium/crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/palladium-io/sync-engine"
rust-version = "1.82"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
# Additional safety lints
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# Lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Specific lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Monorepo internals — not published to crates.io individually
cargo_common_metadata = "allow"
# Transitive dep diamond; not actionable without forking dependencies
multiple_crate_versions = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tempfile = { version = "3" }
toml = { version = "0.8" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "sqlite",
  "uuid",
  "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2" }
anyhow = { version = "1" }

# Tracing / observability
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# OpenAPI doc generation
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Load / integration testing
testcontainers = { version = "0.23" }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
