[package]
name = "palladium-axum"
version = "0.1.0"
description = "Palladium sync engine — Axum extractor, router, and middleware"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
cats-tests = []

[dependencies]
palladium-core = { path = "../palladium-core", features = ["openapi"] }
palladium-blobs = { path = "../palladium-blobs" }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
palladium-sqlite = { path = "../palladium-sqlite" }
tower = { workspace = true }
testcontainers = { workspace = true }
tempfile = { workspace = true }
