[package]
name = "palladium-postgres"
version = "0.1.0"
description = "Palladium sync engine — Postgres broadcaster and pool helpers"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }

[features]
default = []
listen-notify = []
integration-tests = []
load-tests = []
redis = ["dep:redis"]

[dependencies]
palladium-core = { path = "../palladium-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redis = { version = "0.27", optional = true }
