[package]
name = "palladium-sqlite"
version = "0.1.0"
description = "Palladium sync engine — SQLite backend (server-side embedded)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
palladium-core = { path = "../palladium-core" }
uuid = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "store"
harness = false

[features]
default = []

[dependencies]
palladium-core = { path = "../palladium-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
